<resources>
    <string name="error_appstate_not_loaded_for_fragment">Error: The data for the fragment is not loaded</string>
    <string name="error_button_is_not_assigned">Error: The button is not assigned</string>
    <string name="error_not_inserted_weight_animal">Please enter a number > 0</string>
    <string name="teg_outputDataDimensionType_length" translatable="false">LENGTH</string>
    <string name="teg_outputDataDimensionType_square_length" translatable="false">SQUARE_LENGTH</string>
    <string name="teg_outputDataDimensionType_volume" translatable="false">VOLUME</string>
    <string name="teg_outputDataDimensionType_mass" translatable="false">MASS</string>
    <string name="teg_outputDataDimensionType_mass_dose_per_kg_per_time" translatable="false">MASS_DOSE_PER_KG_PER_TIME</string>
    <string name="teg_outputDataDimensionType_time" translatable="false">TIME</string>
    <string name="teg_outputDataDimensionType_drop_time_in_sec" translatable="false">DROP_TIME_IN_SEC</string>
    <string name="teg_outputDataDimensionType_drop_time_in_ten_sec" translatable="false">DROP_TIME_IN_TEN_SEC</string>
    <string name="teg_outputDataDimensionType_drop_time_in_min" translatable="false">DROP_TIME_IN_MIN</string>
    <string name="teg_outputDataDimensionType_rate" translatable="false">RATE</string>
    <string name="teg_outputDataDimensionType_drop" translatable="false">DROP</string>
    <string name="teg_outputDataDimensionType_error_type" translatable="false">ERROR_TYPE</string>
    <string name="teg_inputDataDimensionType_weight_animal" translatable="false">WEIGHT_ANIMAL</string>
    <string name="teg_inputDataDimensionType_mass_dose_per_kg" translatable="false">MASS_DOSE_PER_KG</string>
    <string name="teg_inputDataDimensionType_mass_dose_per_kg_per_time" translatable="false">MASS_DOSE_PER_KG_PER_TIME</string>
    <string name="teg_inputDataDimensionType_volume_dose_per_kg_per_time" translatable="false">VOLUME_DOSE_PER_KG_PER_TIME</string>
    <string name="teg_inputDataDimensionType_volume_dose_per_time" translatable="false">VOLUME_DOSE_PER_TIME</string>
    <string name="teg_inputDataDimensionType_concentration" translatable="false">CONCENTRATION</string>
    <string name="teg_inputDataDimensionType_concentration_volume_percent" translatable="false">CONCENTRATION_VOLUME_PERCENT</string>
    <string name="teg_inputDataDimensionType_volume" translatable="false">VOLUME</string>
    <string name="teg_inputDataDimensionType_time" translatable="false">TIME</string>
    <string name="teg_inputDataDimensionType_error_type" translatable="false">ERROR_TYPE</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_divide">/</string>
    <string name="_minus">-</string>
    <string name="_zapitay">,</string>
    <string name="_equal">=</string>
    <string name="_multiply">*</string>
    <string name="_plus">+</string>
    <string name="_bracket_open">(</string>
    <string name="_bracket_close">)</string>
    <string name="_percent">%</string>
    <string name="_plus_minus">+/-</string>
    <string name="_stepen">x^n</string>
    <string name="_sqrt">Kx</string>
    <string name="_backspaceTwo"><![CDATA[<--]]></string>
    <string name="_backspace">C</string>
    <string name="InputHistory_text"></string>
    <string name="RESULT_text">0</string>
    <string name="_backspaceOne"><![CDATA[<-]]></string>
    <string name="default_radius_text">177</string>
    <string name="error_different_number_brackets">Error: Different number of open and closed brackets</string>
    <string name="error_undersquare_low_zero">Error: The root expression is less than zero</string>
    <string name="error_divide_on_zero">Error: Division by zero</string>
    <string name="error_inside_brackets_empty">Error: There is nothing inside the brackets</string>
    <string name="about_surface_button_text_text">ABOUT\nVetFormula</string>
    <string name="about_text_text">INFORMATION</string>
    <string name="pharmacy_button_text_text">Pharmacy</string>
    <string name="pharmacy_previous_text_text">Pharmacy</string>
    <string name="pharmacy_surface_button_text_text">Surface\nArea</string>
    <string name="pharmacy_surface_previous_text_text">Body surface area</string>
    <string name="pharmacy_calculate_button_text">Calculate</string>
    <string name="pharmacy_result_previous_text_text">Result</string>
    <string name="pharmacy_about_button_hints">ABOUT\nVetFormula</string>
    <string name="about_logo_text">About</string>
    <string name="info_logo_text">Information</string>
    <string name="pharmacy_logo_text">VetFormula</string>
    <string name="fluids_button_text_text">Fluids</string>
    <string name="fluids_button_surface_text_text">Basic</string>
    <string name="fluids_previous_text_text">Fluids</string>
    <string name="hematology_button_text_text">Hematology</string>
    <string name="hematology_previous_text_text">Hematology</string>
    <string name="hematology_button_surface_text_text">Transfusion</string>
    <string name="gases_previous_text_text">Gases</string>
    <string name="gases_button_text_text">Gases</string>
    <string name="gases_inhalation_anesthesia_button_text_text">Inhalation\nanesthesia</string>
    <string name="settings_previous_text_text">Settings</string>
    <string name="settings_button_text_text">Settings</string>
    <string name="settings_button_surface_text_text">SomeSettings</string>
    <string name="settings_language_text">Language</string>
    <string name="calculator_previous_text_text">Calculator</string>
    <string name="calculator_button_text_text">Calculator</string>
    <string name="calculator_button_surface_text_text">Calculate</string>
    <string name="pharmacy_clear_button_text_text">C</string>
    <string name="pharmacy_type_animal_title_text">Animal type</string>
    <string name="pharmacy_weight_animal_title_text">Weight</string>
    <string name="pharmacy_weight_textinputlayout_textfield_hint">Animal weight</string>
    <string name="pharmacy_dose_animal_title_text">Dose</string>
    <string name="pharmacy_dose_textinputlayout_textfield_hint">Amount</string>
    <string name="pharmacy_concentration_animal_title_text">Specify concentration</string>
    <string name="pharmacy_concentration_textinputlayout_textfield_hint">Concentration value</string>
    <string name="pharmacy_amount_textinputlayout_textfield_hint">Amount</string>
    <string name="pharmacy_fluids_animal_title_text">Amount</string>
    <string name="pharmacy_drop_textinputlayout_textfield_hint">No Giving Set</string>
    <string name="pharmacy_drop_animal_title_text">Giving Set</string>
    <string name="pharmacy_dose_button_text_text">Pharmacy Doses</string>
    <string name="pharmacy_cri_button_text_text">Pharneg CRI</string>
    <string name="pharmacy_cri_previous_text_text">Pharneg CRI</string>
    <string name="pharmacy_dose_previous_text_text">PharmacyDose</string>
    <string name="pharmacy_speed_animal_title_text">Rate</string>
    <string name="pharmacy_rate_textinputlayout_textfield_hint">Rate</string>
    <string name="tickCaptionHeartRate">HR</string>
    <string name="tickCaptionBDD">BDD</string>
    <string name="captionStopTimer">Stop timer</string>
    <string name="captionStartTimer">Start timer</string>
    <string name="timer_button_text_text">Timer</string>
    <string name="doses_result_text_text">100</string>
    <string name="timerText_text">00:00</string>
    <string name="startTimerButton_text">Run</string>
    <string name="inputManualCount_text">0</string>
    <string name="textView3_text">Heartbeats</string>
    <string name="tickInMinutes_text">0.00</string>
    <string name="buttonResetTickCounter_text">Reset tick counter</string>
    <string name="timer_previous_text_text">Timer</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="theme">Theme</string>
    <string name="pharmacy_help_info_text">Fill in all numeric fields before calculating!</string>
    <string name="pharmacy_result_title_text">Body surface area</string>
    <string name="pharmacy_result_volume_title_text">Amount</string>
    <string name="captionBtnStopTimer">STOP</string>
    <string name="captionBtnResetTimer">RESET</string>
    <string name="about_develop">Developed by:\nAndrey Khakhalin
    \nAndrey Skripin
    \nOlga Egonskaya
    \nRoman Zakharov
    \nMaksim Fedorchenko    </string>
    <string name="about_contact">Contact: newveterinar@mail.ru</string>
    <string name="long_click_hint">Hint: %s</string>
    <string name="pharmacy_surface_animal_type_hint">select animal type.</string>
    <string name="pharmacy_surface_animal_weight_hint">enter animal weight.</string>
    <string name="pharmacy_dose_animal_weight_hint">enter the animal weight.</string>
    <string name="pharmacy_dose_dose_hint">enter the drug dose.</string>
    <string name="pharmacy_dose_drug_concentration_hint">enter the drug concentration.</string>
    <string name="pharmacy_cri_animal_weight_hint">enter the animal weight.</string>
    <string name="pharmacy_cri_dose_hint">enter the drug dose.</string>
    <string name="pharmacy_cri_drug_concentration_hint">enter the drug concentration.</string>
    <string name="pharmacy_cri_rate_hint">enter the drug rate.</string>
    <string name="pharmacy_cri_fluid_amount_hint">enter volume of fluid.</string>
    <string name="pharmacy_result_drip_rate_title_text">Drip rate</string>
    <string name="pharmacy_cri_giving_set_hint">select if you have a giving set.</string>
    <string name="main_screen_settings_hint">move to settings screen.</string>
    <string name="main_screen_about_hint">move to \"About app\" screen.</string>
    <string name="pharmacy_result_drip_rate_time_title_text_text">One drop every</string>
    <string name="pharmacy_result_rate_rate_title_text_text">Rate of:</string>
    <string name="pharmacy_result_rate_mass_dose_per_kg_per_time_title_text_text">Gives:</string>
    <string name="pharmacy_result_rate_time_title_text_text">For:</string>
    <string name="pharmacy_result_amount_volume_text_text">Add:</string>
    <string name="buttonPlusMinute_text">+1</string>
    <string name="buttonMuteUnMute_mute_text">MUTE</string>
    <string name="buttonMuteUnMute_unmute_text">UNMUTE</string>
    <string name="textView2_text">Calculation BDD</string>
    <string name="textViewHR_text">(HR)</string>
    <string name="btn_delete_note_text">Delete</string>
    <string name="btn_load_note_text">Load</string>
    <string name="btn_save_note_text">Save</string>
    <string name="about_timer_title">Timer for determining the heart rate (HR) and respiratory rate (HRD).</string>
    <string name="about_timer_tv_start">It allows you to simultaneously measure heart rate and BPD. The parameters are measured simultaneously. During the measurement, the user is required to:\n</string>
    <string name="about_timer_tv_middle">1) turn it on, stop it, reset the values obtained, add another minute or several minutes during the measurement;\n2) use a stethoscope to count the number of heartbeats;\n3) by hearing, determining the moment of the patients breathing, click on the picture of the foot at the time of the timer and it will count the number of patients breaths;\n3) at the end of the timer, enter the number of counted heartbeats, after which the heart rate result will be displayed.\n</string>
    <string name="about_timer_tv_end">It is not necessary to wait for the timer to end. Measurements can be stopped at any time, thereby speeding up the operation.</string>
</resources>