<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/timer_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSecondary"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/timer_about_button"
            android:layout_width="@dimen/about_app_button_width"
            android:layout_height="@dimen/about_app_button_height"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/timer_about_button_margin_top"
            android:layout_marginBottom="@dimen/timer_about_button_margin_bottom"
            android:layout_marginEnd="@dimen/timer_about_button_margin_end"
            android:autofillHints="@string/pharmacy_about_button_hints"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_information_about" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/timer_previous_button_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/timer_previous_button"
                android:layout_width="@dimen/pharmacy_previous_button_width"
                android:layout_height="@dimen/pharmacy_previous_button_height"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/timer_previous_button_margin_start"
                android:layout_marginTop="@dimen/timer_previous_button_margin_top"
                android:rotation="@dimen/arrow_back_rotation_angle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_arrow_right" />

            <TextView
                android:id="@+id/timer_previous_text"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/pharmacy_surface_previous_text_margin_start"
                android:paddingStart="@dimen/pharmacy_surface_previous_text_padding_start"
                android:text="@string/timer_previous_text_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.466" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/settings_horizontal_border"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_horizontal_border_height"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/timer_header"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/zero_dimension"
        android:layout_height="@dimen/zero_dimension"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer_header">

        <Button
            android:id="@+id/buttonResetTimer"
            android:layout_width="@dimen/zero_dimension"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/buttonResetTimer_margin_top"
            android:text="@string/captionBtnResetTimer"
            app:layout_constraintEnd_toEndOf="@+id/buttonStartTimer"
            app:layout_constraintStart_toStartOf="@+id/buttonStartTimer"
            app:layout_constraintTop_toBottomOf="@+id/buttonStopTimer" />

        <Button
            android:id="@+id/buttonStartTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/buttonStartTimer_margin_start"
            android:layout_marginTop="@dimen/buttonStartTimer_margin_top"
            android:text="@string/startTimerButton_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonStopTimer"
            android:layout_width="@dimen/zero_dimension"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/buttonStopTimer_margin_top"
            android:text="@string/captionBtnStopTimer"
            app:layout_constraintEnd_toEndOf="@+id/buttonStartTimer"
            app:layout_constraintStart_toStartOf="@+id/buttonStartTimer"
            app:layout_constraintTop_toBottomOf="@+id/buttonStartTimer" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/labelManualCount"
            android:layout_width="@dimen/zero_dimension"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/labelManualCount_margin_start"
            android:layout_marginTop="@dimen/labelManualCount_margin_top"
            android:hint="@string/textView3_text"
            android:maxWidth="@dimen/labelManualCount_max_width"
            android:minWidth="@dimen/labelManualCount_min_width"
            app:layout_constraintEnd_toEndOf="@+id/timerText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timerText"
            app:startIconContentDescription="@string/tickCaptionHeartRate"
            app:startIconDrawable="@drawable/ic_baseline_favorite_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputManualCount"
                style="@style/number_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number|numberDecimal"
                android:cursorVisible="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/timerText"
            android:layout_width="@dimen/zero_dimension"
            android:layout_height="@dimen/zero_dimension"
            android:layout_marginStart="@dimen/timerText_margin_start"
            android:layout_marginTop="@dimen/timerText_margin_top"
            android:layout_marginEnd="@dimen/timerText_margin_end"
            android:layout_marginBottom="@dimen/timerText_margin_bottom"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/timerText_text"
            android:textSize="@dimen/timerText_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/buttonResetTimer"
            app:layout_constraintEnd_toStartOf="@+id/buttonPlusMinute"
            app:layout_constraintStart_toEndOf="@+id/buttonStopTimer"
            app:layout_constraintTop_toTopOf="@+id/buttonStartTimer" />

        <Button
            android:id="@+id/buttonPlusMinute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/buttonPlusMinute_margin_top"
            android:layout_marginEnd="@dimen/buttonPlusMinute_margin_end"
            android:text="@string/buttonPlusMinute_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonMuteUnMute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonMuteUnMute_mute_text"
            app:layout_constraintEnd_toEndOf="@+id/buttonPlusMinute"
            app:layout_constraintStart_toStartOf="@+id/buttonPlusMinute"
            app:layout_constraintTop_toBottomOf="@+id/buttonPlusMinute" />

        <TextView
            android:id="@+id/textView2"
            style="@style/number_button"
            android:layout_width="@dimen/zero_dimension"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/textView2_margin_start"
            android:layout_marginBottom="@dimen/textView2_margin_bottom"
            android:layout_marginTop="@dimen/textView2_margin_top"
            android:text="@string/textView2_text"
            app:layout_constraintTop_toBottomOf="@id/labelManualCount"
            app:layout_constraintEnd_toStartOf="@+id/tickInMinutesTimer"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tickInMinutesTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/tickInMinutesTimer_margin_end"
            android:textSize="@dimen/tickInMinutesTimer_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/tickInMinutes_text" />

        <ImageView
            android:id="@+id/touchPlace"
            android:layout_width="@dimen/zero_dimension"
            android:layout_height="@dimen/zero_dimension"
            android:layout_marginStart="@dimen/touchPlace_margin_start"
            android:layout_marginEnd="@dimen/touchPlace_margin_end"
            android:src="@drawable/ic_touch_paw"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textViewHR"
            android:layout_width="@dimen/zero_dimension"
            android:layout_height="@dimen/zero_dimension"
            android:layout_marginStart="@dimen/textViewHR_margin_start"
            android:layout_marginEnd="@dimen/textViewHR_margin_end"
            android:gravity="center_vertical"
            android:text="@string/textViewHR_text"
            android:textSize="@dimen/textViewHR_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/labelManualCount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/labelManualCount"
            app:layout_constraintTop_toTopOf="@+id/labelManualCount" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>