<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/about_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/about_header_height"
        android:background="?attr/colorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/about_about_button"
            android:layout_width="@dimen/about_about_button_width"
            android:layout_height="@dimen/about_about_button_height"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/about_about_button_margin_top"
            android:layout_marginEnd="@dimen/about_about_button_margin_end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_information_about" />

        <TextView
            android:id="@+id/about_logo"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/about_logo_padding_start"
            android:text="@string/about_logo_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/about_horizontal_border"
            android:layout_width="match_parent"
            android:layout_height="@dimen/about_horizontal_border_height"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/pharmacy_header_height"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/about_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/about_timer_margin_start"
            android:layout_marginTop="@dimen/about_timer_margin_top"
            android:layout_marginEnd="@dimen/about_timer_margin_end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/about_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_timer_title"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_timer_tv_start"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/about_title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/about_timer_tv_middle"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_start" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_timer_tv_end"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_middle" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>